--- a/Mods ChoGGi/Game Rules Permanent Disasters/todo.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/todo.txt
@@ -2,4 +2,4 @@ heat wave
 evaporates water from tanks/lakes
 lowers moisture produced by moist vaps
 
-prefabs laser defernse/heaters
+prefabs laser defense/heaters
