--- a/Mods ChoGGi/Oxygen Management/changes.txt
+++ b/Mods ChoGGi/Oxygen Management/changes.txt
@@ -1,1 +1,7 @@
+v0.3
+Removed water req from factories.
+Removed tech lock for now (will add back as mod option).
+
 v0.2
+Fixed some factories not consuming oxygen.
+Made smaller factories use less oxygen.
