Lib: - missed some ex funcs in addedfunctions.lua
Mods:

Defence Towers Attack DustDevils 0.7:
Added mod options to disable mod/unlock turrets.

Disable Dust Storm Maintenance 0.2:
Forgot to add req for my library.

Dust Geyser Info:
Select a dust geyser to see the damage radius.

Remove Unwanted Colonists 1.4:
Fiddled with code testing if out of dome.
Mod option to ignore domes.

Rocket Drone Packing 0.3:
Possible cure for glitchy drones.

github@choggi.org

--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,7 @@
+v1.4
+Fiddled with code testing if out of dome.
+Mod option to ignore domes.
+
 v1.3
 Possible fix for missing mod options (mods making old traits).
 
