--- a/Mods ChoGGi/Nursery Limit Birthing To Spots/changes.txt
+++ b/Mods ChoGGi/Nursery Limit Birthing To Spots/changes.txt
@@ -1,3 +1,7 @@
+v1.0
+Merged checking for all nurseries into one (removed option for Ultimate Nursery).
+This mod will do nothing on Incubator enabled domes.
+
 v0.9
 Fixed bug checking for nurseries (thanks Acerocket).
 
