Lib: - Fixed crash examining PointLight objects (some invisible objects do have a mesh).
Mods:

Add Rivals:
Add three random rivals if you don't have any (ex: Space Race DLC added to existing save).
This will add them to any save without rivals.

Canadian Space Agency 2 0.5:
Updated logo, and added logo with transparent letters.

Change Rain Type:
Set the type of rain that falls (normal or toxic).

Fix Mirror Graphics:
By default this mod only changes dumping sites and dome grass, see mod options to enable other textures you need changed.

Not so much a fix as changing textures to something that doesn't show the ugly mirrored textures.
If you want to see soil quality; you'll need to use a forestation plant to toggle the soil view.

Show All Textures:
This will "build" a list of textured areas on the map.
The mod will look weird on a save with trees and such.

github@choggi.org

--- a/Mods ChoGGi/Canadian Space Agency 2/changes.txt
+++ b/Mods ChoGGi/Canadian Space Agency 2/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Updated logo, and added logo with transparent letters.
+
 v0.4
 Fixed drones not showing up in resupply.
 Unlock flying drone skins (if you have space race).
