Expanded Cheat Menu: - Moved some more Examine funcs from ECM I missed. ### Changed:
Lib:
- Cloning objects to mouse cursor (Shift-Q) no longer places at middle of hexes.

Mods:

Borked Mod Building Template:
If the build menu shows a category or two and doesn't open, then crashes when you try and click it.
This mod "should" tell you which building is causing the issue.

Colonist Next Age:
Change the min age for a colonist to transition to the next age.

Empty Mech Depot 1.0:
Now you can salvage a mech depot with resources.

Fix Mirror Graphics 0.4:
Moved beach sand into it's own option.
Changed Dome Grass option to disabled by default.

More Keybinds 0.4:
Added keybind for Shift for placing multiple buildings.

Terrain Colour:
Change the four largest ground textures (permanent per save, terraforming will probably green it).
You have to apply the mod options to change anything.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", " Text"
-302535920001637,
-302535920001638,
 302535920001639,
 302535920001640,
 302535920001641,
@@ -623,7 +621,9 @@ Press Enter to refresh list (update names).
 302535920000941, "Passenger Ark Pod"
 302535920000975, "Pod Price"
 302535920000976, "Change the price per pod (applies to both supply/passenger)."
-302535920000526, "Any cheats changed here will override ones from a non-Consts menu."
+302535920000526, "Any cheats changed here will override ones from a non-Consts menu.
+
+<color ChoGGi_red>Warning</color>: Changing these settings may cause crashing!"
 302535920000213, "Previously set in an ECM menu (meaning it's active and the setting here will override this value)."
 302535920000158, "Consts"
 302535920000182, "The scale this amount will be multipled by when used."
@@ -1137,6 +1137,8 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920001637, "Absolute"
+302535920001638, "Relative"
 302535920001066, "InfoPanel Dialog"
 302535920001451, "Center the InfoPanel dialog (selection panel)."
 302535920000935, "Random mini missions that happen while playing."
