--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", " Text"
-302535920001645,
 302535920001646,
 302535920001647,
 302535920001648,
@@ -1502,6 +1501,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920001645, "May cause crashing!"
 302535920001627, "This is only visual; this won't affect the game state (unless something uses the list to check)."
 302535920001623, "List Normal"
 302535920001624, "Changes the list of lightmodels to use (night/day/etc)."
