--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", " Text"
-302535920001646,
 302535920001647,
 302535920001648,
 302535920001649,
@@ -184,6 +183,56 @@ It don't matter if you're black or white"
 302535920001543, "Set collisions on <green>%s</green>. Collisions disabled: <yellow>%s</yellow>"
 302535920001541, "Start a Crime Event"
 302535920001542, "Renegades not required."
+302535920001646, "Max out the stored water to fire it up immediately."
+302535920001428, "Instantly finish current drone/biorobot."
+302535920001095, "Double the charge capacity of this <green>%s</green>."
+302535920001096, "Reset the charge capacity of this <green>%s</green> to default."
+302535920001531, "Make the building model look like a construction site (toggle)."
+302535920000903, "Unfreeze frozen object."
+302535920001431, "Kill this colonist!"
+302535920001430, "Kill colonist"
+302535920000162, "Need"
+302535920000083, "<left_click> Activate"
+302535920000060, "Instantly complete building without needing resources."
+302535920001277, "Open <green>%s</green> in the Object Examiner."
+302535920001053, "Fill up <green>%s</green> with fuel."
+302535920000005, "Drops a new colonist in selected dome."
+302535920001246, "Changes colour of <green>%s</green> back to default."
+302535920001199, "Double the amount of colonist slots for this building."
+302535920001200, "Reset the capacity of colonist slots for this building."
+302535920001202, "Fill all stat bars."
+302535920001203, "Double <green>%s</green>'s performance."
+302535920001204, "Reset <green>%s</green>'s performance to default."
+302535920001205, "Randomly set <green>%s</green>'s specialization."
+302535920001207, "Add: <yellow>%s</yellow> to this building.
+
+<green>%s</green>"
+302535920001209, "Make this <green>%s</green> not need workers (performance: <yellow>%s</yellow>)."
+302535920001210, "Make this <green>%s</green> need workers."
+302535920001211, "Double the export storage capacity of this <green>%s</green>."
+302535920001212, "Double the storage capacity of this <green>%s</green>."
+302535920001213, "Reset the storage capacity of this <green>%s</green> to default."
+302535920001214, "Sticks small depot in front of mech depot and moves all resources to it (max of 20 000)."
+302535920001215, "Turn on all work shifts."
+302535920001216, "Double the battery capacity."
+302535920001217, "Double the shuttles this ShuttleHub can control."
+302535920001218, "Selects nearest storage containing specified resource (shows list of resources)."
+302535920001220, "Change this <green>%s</green> so it doesn't need a <yellow>%s</yellow> source."
+302535920001221, "Change this <green>%s</green> so it needs a <yellow>%s</yellow> source."
+302535920001223, "Toggle any signs above <green>%s</green> (until state is changed)."
+302535920001224, "Changes colour of <green>%s</green> to random colours (doesn't change attachments)."
+302535920001225, "Adds dust and maintenance points."
+302535920001226, "Cleans dust and removes maintenance points."
+302535920001227, "Turns object into ruin."
+302535920001228, "Set the stored amount of this <green>%s</green> to <yellow>0</yellow>."
+302535920001230, "Empties the storage of this building.
+
+If this isn't a dumping site then waste rock will not be emptied."
+302535920001231, "Refill the deposit to full capacity."
+302535920001232, "Fill the storage of this building."
+302535920001233, "Launches rocket without asking."
+302535920001234, "Double the amount this <green>%s</green> can hold."
+302535920001236, "Double amount of reneagades this station can negate (currently: <green>%s</green>) < Reselect to update amount."
 302535920001518, "<left_click>*2 title to rollup into the title bar."
 302535920000222, "Oh look ECM hit the itty bitty limit of const.MaxModDataSize. Who'd a thunk it? Eh' Mortimer."
 302535920000739, "Black"
@@ -282,55 +331,6 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000733, "Open a preset in the editor."
 302535920001410, "Toggle Visibility"
 302535920000735, "Timer delay skipped"
-302535920001428, "Instantly finish current drone/biorobot."
-302535920001095, "Double the charge capacity of this <green>%s</green>."
-302535920001096, "Reset the charge capacity of this <green>%s</green> to default."
-302535920001531, "Make the building model look like a construction site (toggle)."
-302535920000903, "Unfreeze frozen object."
-302535920001431, "Kill this colonist!"
-302535920001430, "Kill colonist"
-302535920000162, "Need"
-302535920000083, "<left_click> Activate"
-302535920000060, "Instantly complete building without needing resources."
-302535920001277, "Open <green>%s</green> in the Object Examiner."
-302535920001053, "Fill up <green>%s</green> with fuel."
-302535920000005, "Drops a new colonist in selected dome."
-302535920001246, "Changes colour of <green>%s</green> back to default."
-302535920001199, "Double the amount of colonist slots for this building."
-302535920001200, "Reset the capacity of colonist slots for this building."
-302535920001202, "Fill all stat bars."
-302535920001203, "Double <green>%s</green>'s performance."
-302535920001204, "Reset <green>%s</green>'s performance to default."
-302535920001205, "Randomly set <green>%s</green>'s specialization."
-302535920001207, "Add: <yellow>%s</yellow> to this building.
-
-<green>%s</green>"
-302535920001209, "Make this <green>%s</green> not need workers (performance: <yellow>%s</yellow>)."
-302535920001210, "Make this <green>%s</green> need workers."
-302535920001211, "Double the export storage capacity of this <green>%s</green>."
-302535920001212, "Double the storage capacity of this <green>%s</green>."
-302535920001213, "Reset the storage capacity of this <green>%s</green> to default."
-302535920001214, "Sticks small depot in front of mech depot and moves all resources to it (max of 20 000)."
-302535920001215, "Turn on all work shifts."
-302535920001216, "Double the battery capacity."
-302535920001217, "Double the shuttles this ShuttleHub can control."
-302535920001218, "Selects nearest storage containing specified resource (shows list of resources)."
-302535920001220, "Change this <green>%s</green> so it doesn't need a <yellow>%s</yellow> source."
-302535920001221, "Change this <green>%s</green> so it needs a <yellow>%s</yellow> source."
-302535920001223, "Toggle any signs above <green>%s</green> (until state is changed)."
-302535920001224, "Changes colour of <green>%s</green> to random colours (doesn't change attachments)."
-302535920001225, "Adds dust and maintenance points."
-302535920001226, "Cleans dust and removes maintenance points."
-302535920001227, "Turns object into ruin."
-302535920001228, "Set the stored amount of this <green>%s</green> to <yellow>0</yellow>."
-302535920001230, "Empties the storage of this building.
-
-If this isn't a dumping site then waste rock will not be emptied."
-302535920001231, "Refill the deposit to full capacity."
-302535920001232, "Fill the storage of this building."
-302535920001233, "Launches rocket without asking."
-302535920001234, "Double the amount this <green>%s</green> can hold."
-302535920001236, "Double amount of reneagades this station can negate (currently: <green>%s</green>) < Reselect to update amount."
 302535920001360, "Threads"
 302535920001361, "Will also search thread func names for value (case is ignored for this)."
 302535920000501, "Case-sensitive"
