Expanded Cheat Menu:
### Fixed:
- Help>Mod Upload will correctly upload first mod when uploading a bunch.

Lib:
- Fixed some log spam from research text in main menu.

Mods:

Picard fixed:
1 Percenter, Dome Birth Progress, Dome Stop Filter Traits Reset Quarantine, Notification Pause, Pause On Load, Pin Drone Finished Task, Set Speed Keys, Show Research Progress on HUD 2

Allow Buildings 0.2:
Allows all buildings.

Change Rocket Skin 0.8:
Added Picard landers.
Fixed skin colour of trail blazer rocket.

Unlock Research Tech 0.4:
Forgot to remove an "end".

github@choggi.org

--- a/Mods ChoGGi/Change Rocket Skin/changes.txt
+++ b/Mods ChoGGi/Change Rocket Skin/changes.txt
@@ -1,3 +1,7 @@
+v0.8
+Added Picard landers.
+Fixed skin colour of trail blazer rocket.
+
 v0.7
 Fix possible issue with Silva - Orion Heavy Rocket.
 
