Expanded Cheat Menu:
### Fixed:
- Terrain Editor wasn't updating flight grid (Thanks SkiRich).

Mods:

Build Mystery Rewards 0.5:
Picard update.

Fireworks Launcher 0.4:
Provides a minimal boost to terraforming heat (0.01) for a cost (100M), mod option to disable.
Also an option to toggle rainfall.

github@choggi.org

--- a/Mods ChoGGi/Fireworks Launcher/changes.txt
+++ b/Mods ChoGGi/Fireworks Launcher/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Provides a minimal boost to terraforming heat (0.01) for a cost (100M), mod option to disable.
+Also an option to toggle rainfall.
+
 v0.3
 Picard update.
 
