Expanded Cheat Menu: - Menu>Interface>Selection Panel Resize: Stops selection panel from shrinking (eg: dome). - Menu>Interface>Scroll Selection Panel: Add a scrollbar to larger selection panels (buildings, domes, etc).
Lib:
- Added Chinese (Simplified) translation by aiawar.

Mods:

All Sponsor Buildings 0.9:
Removed Lock Behind Tech option.
Fixed individual tech lock.
v0.8
Locked a bunch more behind tech.
Added mod options to skip tech for certain buildings.

Disable Selection Panel Sizing 0.5:
Added height limit for infopanel.
Enabled scrollbar by default (flickering was fixed by devs sometime).

Infobar More Info 3.0:
Fixed colonist count when there's no colonists.
v2.9
Picard update again again (thanks ella).

Lower Maintenance In Dome:
Defaults to 25% of normal maintenance cost, see mod options to change.
This only applies to Stirlings and Solars (suggestions).

More Keybinds 0.5:
Toggle Interface

Play All Mysteries:
After finishing your current mystery a random one will start.
Picks first from the list of finished mysteries (see new game>mysteries checkmarks).
Second pick is from a per-save list of finished mysteries.
After that it's just random.

RC Driller Cheats 0.3:
Forgot to add my lib as a dependency.
Fixed sponsor lock.

Rocket Cheats 0.5:
Forgot to add my library as dependency.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 "ID", " Text"
-302535920001653, ""
-302535920001654, ""
-302535920001655, ""
-302535920001656, ""
 302535920001657, ""
 302535920001658, ""
 302535920001659, ""
@@ -1547,6 +1543,10 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920001653, "Toggle Selection Panel Resize"
+302535920001654, "Stops selection panel from shrinking (eg: dome)."
+302535920001655, "Toggle Scroll Selection Panel"
+302535920001656, "Add a scrollbar to larger selection panels (buildings, domes, etc)."
 302535920001651, "Unlock Overview"
 302535920001652, "Overview works on all maps."
 302535920001645, "May cause crashing!"
@@ -1709,7 +1709,7 @@ Not noticeable unless using higher zoom."
 
 If you have any issues with this mod then please send me a bug report instead of reporting the mod.
 https://github.com/ChoGGi/SurvivingMars_CheatMods
-https://discord.gg/bkdjEZU
+https://discord.gg/ZXXYaExThy
 https://steamcommunity.com/id/ChoGGi/
 SurvivingMarsMods@choggi.org"
 302535920000221, "See log for any batch errors."
