--- a/ChoGGi's Library/Locales/Schinese.csv
+++ b/ChoGGi's Library/Locales/Schinese.csv
@@ -1,4 +1,8 @@
 ID," "" Text""",,,,,,
+302535920001653, """Toggle Selection Panel Resize""",,,,,,
+302535920001654, """Stops selection panel from shrinking (eg: dome).""",,,,,,
+302535920001655, """Toggle Scroll Selection Panel""",,,,,,
+302535920001656, """Add a scrollbar to larger selection panels (buildings, domes, etc).""",,,,,,
 302535920001653," """"",,,,,,
 302535920001654," """"",,,,,,
 302535920001655," """"",,,,,,
@@ -1709,7 +1713,7 @@ click+drag for multiple selection.,,,,,,,
 ,,,,,,,
 如果你对这个模块有任何问题，请给我发一个错误报告，而不是报告模块。,,,,,,,
 https://github.com/ChoGGi/SurvivingMars_CheatMods,,,,,,,
-https://discord.gg/bkdjEZU,,,,,,,
+https://discord.gg/ZXXYaExThy,,,,,,,
 https://steamcommunity.com/id/ChoGGi/,,,,,,,
 "SurvivingMarsMods@choggi.org""",,,,,,,
 302535920000221," ""参见日志，了解任何批处理错误。""",,,,,,
