--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Mod options to unlock MDS Lasers / Defensive Turrets from the get-go.
+
 v0.7
 Freezing issue when enabling all four rules and loading a save.
 
