--- a/Mods ChoGGi/Play All Mysteries/changes.txt
+++ b/Mods ChoGGi/Play All Mysteries/changes.txt
@@ -1,2 +1,8 @@
+v0.3
+Added options:
+Skip mysteries
+Delay start
+Show popup msg
+
 v0.2
 Forgot to make it call the func when previous mystery ends... (thanks Lilianne_Blaze)
