Expanded Cheat Menu:
### Fixed:
- Issue with Tourist in CheatRandomSpec (thanks LukeH).
- Scroll Selection Panel wouldn't let you click the bottom area.

Mods:

Drone Hub Range 0.7:
Picard update.

Farm Cheats 0.2:
Added mod options:
Mech Farming: Workers not needed.
Mech Performance: How much performance each farm does.

Fix Dust Devils Block Building:
No more cheesing dust devils with waste rock depots (etc).

Game Rules Permanent Disasters 0.9:
Added mod options Allow MOXIEs: You can build/use MOXIEs.

More Keybinds 0.6:
Examine Object/Examine Object Radius

Solar Array Follows Sun 0.7:
Hopefully fixes them from stopping after awhile.

github@choggi.org

--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Added mod options Allow MOXIEs: You can build/use MOXIEs.
+
 v0.8
 Mod options to unlock MDS Lasers / Defensive Turrets from the get-go.
 
