Expanded Cheat Menu:
### Added:
- Menu>Game>Interface>Toggle Vertical Cheat Menu: Puts the menu down the side of the screen to save horizontal space for the info bar.

### Changed:
- ReplacedFunctions.lua changed ClassesBuilt to use ClassesPostprocess.

Lib:
- Re-fangled how specs are set.

#46
302535920001660, "Toggle Vertical Cheat Menu"
302535920001661, "Puts the menu down the side of the screen to save horizontal space for the info bar."

Mods:

Dome Show Trait Filters 0.2:
Picard update.

Specialist By Experience 1.0:
Re-fangled setting spec.

Stop Rocket Camera 0.5:
map_id fix.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,6 @@
 "ID", "Text", "Translation"
-302535920001660, ""
-302535920001661, ""
+302535920001660, "Toggle Vertical Cheat Menu"
+302535920001661, "Puts the menu down the side of the screen to save horizontal space for the info bar."
 302535920001662, ""
 302535920001663, ""
 302535920001664, ""
