Expanded Cheat Menu:
#46
-302535920001258,
-302535920001259,
-302535920001262,

Mods:

All Sponsor Buildings 1.2:
Forgot to concat.

Permanent Priority 0.3:
Picard update.

Play All Mysteries 0.5:
Fixed for last update.
Msg popup happens when mystery is picked instead of when it's started.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,7 @@
 "ID", "Text", "Translation"
+302535920001258, ""
+302535920001259, ""
+302535920001262, ""
 302535920001380, ""
 302535920001381, ""
 302535920001662, ""
@@ -1705,7 +1708,7 @@ Not noticeable unless using higher zoom."
 302535920000656, "Toggle between moving camera and selecting objects."
 302535920001647, "Window Title"
 302535920001648, "If you don't want ECM to change the window title than disable this (restart to take effect)."
-302535920001634, "This mod requires my lib mod (ChoGGi's Library)."
+302535920001634, "This mod requires my library mod (ChoGGi's Library ) < use space on the end when searching for it."
 302535920000990, "You need to have a mouse to use this mod."
 302535920000887, "If you get a disabled content restrictions error: It's on Paradox to review/restore it (bug them not me).
 
@@ -1739,7 +1742,7 @@ If you have a uuid in your metadata.lua this checkbox is ignored and it'll try t
 302535920000322, "Disabling this will remove most of the tooltips (not cheats menu/pane)."
 302535920001387, "Toggle Signs"
 302535920001388, "Concrete, metal deposits, not working, etc..."
-302535920000665, "If uploading a mod this copies mod steam id or uuid to clipboard."
+302535920000665, "If uploading a mod this copies the mod's steam id clipboard."
 302535920001364, "Don't be an asshole to %s... Always ask permission before using other people's hard work."
 302535920001365, "HPK files will be unpacked into AppData/Mods/ModSteamId"
 302535920001362, "Extract HPKs"
@@ -1755,11 +1758,8 @@ Files are placed in your profile folder\Mods"
 302535920000367, "Mod Upload"
 302535920000236, "Mod Editor"
 302535920001265, "ModMessageLog"
-302535920001258, "Copy Files"
-302535920001259, "Copies all mod files to <green>%sModUpload</green>, uncheck to copy files manually."
 302535920001260, "Blank"
 302535920001261, "Uploads a blank mod, and prints id in log."
-302535920001262, "<green>%sModUpload</green> folder is empty and waiting for files."
 302535920001263, "<color ChoGGi_red>%s</color> is different from your name, do you have permission to upload it?"
 302535920001244, "Saves settings to file, and applies any changes."
 302535920001245, "Abort without touching anything."
