--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,9 @@
+v1.1
+Added SavegameFixups to restart threads for dustdevils/etc.
+
+v1.0
+Disappearing dust devils (thanks blade).
+
 v0.9
 Added mod options Allow MOXIEs: You can build/use MOXIEs.
 
