Expanded Cheat Menu:
### Fixed:
- Drone Hub/RC Rover radius.

Mods:

Applicants Age 0.3:
Mod option to remove applicants over a certain age (default none).

Enable Cheats Pane:
Show cheats pane in selection panel.

github@choggi.org

--- a/Mods ChoGGi/Applicants Age/changes.txt
+++ b/Mods ChoGGi/Applicants Age/changes.txt
@@ -1,2 +1,5 @@
+v0.3
+Mod option to remove applicants over a certain age (default none).
+
 v0.2
 Bumps age trait when applicant hits min age of next age group.
