--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -75,8 +75,6 @@
 302535920000547, "Lock"
 302535920000318, "Unlock"
 302535920001486, "DTM Slots"
-302535920000483, "Write Console Log"
-302535920000484, "Write console log to <green>%slogs/ConsoleLog.log</green> (updated every 5 seconds)."
 302535920001469, "Image Viewer"
 302535920000971, "Sites"
 302535920001476, "Edit Flags"
@@ -451,7 +449,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920001089, "Settings & Commands for the console."
 302535920001112, "Console Log"
 302535920001119, "Show console log text in-game (probably an annoyance to non-modders)."
-302535920001133, "Show the console log in a window."
+302535920001133, "Show the console text in a window."
 302535920000407, "<left_click> Execute <right_click> Paste"
 302535920001138, "<left_click> Execute this command in the console, <right_click> to paste code in console."
 302535920001159, "Any .lua files in <green>%s</green>."
@@ -1546,6 +1544,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920000483, "Centuple"
+302535920000484, "Milluple"
 302535920001660, "Toggle Vertical Cheat Menu"
 302535920001661, "Puts the menu down the side of the screen to save horizontal space for the info bar."
 302535920001653, "Toggle Selection Panel Resize"
