--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,5 @@
 "ID", "Text", "Translation"
+302535920000484, ""
 302535920001258, ""
 302535920001259, ""
 302535920001262, ""
@@ -305,7 +306,7 @@ See the bottom of Gameplay>Controls if you've changed the key binding."
 302535920000166, "BROKEN FUNCTION"
 302535920000353, "Scripts"
 302535920000793, "History"
-302535920000881, "Place .lua files in <green>%s</green> to have them show up in the ""Scripts"" list, you can then use the list to execute them (you can also create sub-folders for sorting)."
+302535920000881, "Place .lua files in <green>%s</green> to have them show up in the ""Scripts"" list. You can also create sub-folders for sorting."
 302535920000888, "Any .lua files in here will be part of a list that you can execute in-game from the console menu."
 302535920001297, "Toggle Flight Grid"
 302535920001298, "Shows a square grid with terrain/objects shape."
@@ -1545,7 +1546,6 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
 302535920000483, "Centuple"
-302535920000484, "Milluple"
 302535920001660, "Toggle Vertical Cheat Menu"
 302535920001661, "Puts the menu down the side of the screen to save horizontal space for the info bar."
 302535920001653, "Toggle Selection Panel Resize"
