--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,6 @@
+v1.2
+Mod option to unlock subsurface heaters underground/asteroids for winter wonderland.
+
 v1.1
 Added SavegameFixups to restart threads for dustdevils/etc.
 
