--- a/Mods ChoGGi/Dome Show Connected Objects/changes.txt
+++ b/Mods ChoGGi/Dome Show Connected Objects/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Domes stuck in the connected_domes table (thanks JoshinLama).
+
 v0.4
 Added mod option to move stuff at invalid positions to the dome.
 prints name of obj/dome in log when obj is moved/removed.
