--- a/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
+++ b/Mods ChoGGi/Game Rules Permanent Disasters/changes.txt
@@ -1,3 +1,6 @@
+v1.3
+Log spam (hopefully all of it).
+
 v1.2
 Mod option to unlock subsurface heaters underground/asteroids for winter wonderland.
 
