--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", "Text", "Translation"
-302535920000484, ""
 302535920001258, ""
 302535920001259, ""
 302535920001262, ""
@@ -831,6 +830,7 @@ Use with <green>%s</green> to fill up a dome with spires."
 302535920000230, "Remove Building Limits"
 302535920000231, "Buildings can be placed almost anywhere.
 See also %s."
+302535920000484, "Triggers cave-in at location (and disables any nearby struts)."
 302535920001087, "Missile Strike"
 302535920001086, "Meteor Strike"
 302535920000840, "All colonists spawn as this age."
