--- a/Mods ChoGGi/Number Bind Selection/changes.txt
+++ b/Mods ChoGGi/Number Bind Selection/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+One of the funcs I override was changed (not sure when).
+
 v0.4
 A group with a single object will select that object normally instead of grouped.
 
