--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -46,6 +46,8 @@
 302535920000000, "Expanded Cheat Menu"
 302535920000001, "ChoGGi"
 302535920000002, "ECM"
+302535920000968, "Collisions"
+302535920000581, "Toggle Object Collision"
 302535920001085, "Setting speed to a non integer (e.g 2.5) crashes the game!"
 302535920001586, "All Done!"
 302535920001453, "Completed"
@@ -310,7 +312,6 @@ See the bottom of Gameplay>Controls if you've changed the key binding."
 302535920001297, "Toggle Flight Grid"
 302535920001298, "Shows a square grid with terrain/objects shape."
 302535920001267, "<color ChoGGi_red>%s</color> at position: <yellow>%s</yellow> was stopped."
-302535920000968, "Collisions"
 302535920000969, "Collisions <yellow>%s</yellow> on <green>%s</green>"
 302535920000012, "Error borked building: <color ChoGGi_red>%s</color>"
 302535920000015, "Can't colour <color ChoGGi_red>%s</color>."
@@ -335,7 +336,7 @@ You can copy and paste numbers if you want."
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings""."
 302535920000030, "To show the console log text; press Tilde or Enter and click the ""%s"" button then make sure ""%s"" is checked."
 302535920001441, "<left_click> Activate MenuItem <right_click> Add/Remove Quickbar"
-302535920001439, "~obj, @func, @@type, $id, %img, ^str, *r/*g/*m threads. Hover mouse for more info."
+302535920001439, "~obj, @func, @@type, %img, ^str, *r/*g/*m threads. Hover mouse for more info."
 302535920001440, "<green>~</green><yellow>obj</yellow> opens object in examine dlg, use <color ChoGGi_red>ex(obj)</color> in lua code.
 <green>~!</green><yellow>obj</yellow> opens object's attachments in examine dlg.
 
@@ -1494,7 +1495,6 @@ Seems to fix it after a Sol or two, so you shouldn't need to leave this running.
 You may need to toggle the recall drones button (for certain issues)."
 302535920000939, "Fix certain freezing issues (mouse still moves screen, keyboard doesn't), will lower comfort by about 20."
 302535920000055, "Reset All Colonists"
-302535920000581, "Toggle Object Collision"
 302535920000582, "Select an object and activate this to toggle collision (if you have a rover stuck in a dome)."
 302535920000583, "Rebuild Walkable Points In Domes"
 302535920000584, "Useful? who knows, won't hurt."
