ECM: ### Fixed: - Mystery Log not opening (thanks Alex_X1).
Lib:
- Ambiguously inherited log spam.

Mods:

Construction Show Dome Passage Line 1.7:
Log spam.

Notes 0.1:
Places "note" buildings you can use to store text.
Notepad opens when you select it, toggle in building menu.
Mod options for width/height of notepad.

Pipes Less Limits 0.2:
Added Solar Array.

Waste Rock Dump Site 0.3:
Removed concrete cost req (not sure why it was there).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -97,7 +97,7 @@
 302535920000723, "Lua"
 302535920001257, "Auto-refresh list every second."
 302535920001288, "Wrap Lines"
-302535920001289, "Wrap lines or show horizontal scrollbar."
+302535920001289, "Wrap lines or show horizontal scrollbar (updates after closing window)."
 302535920000069, "Examine"
 302535920000491, "Examine Object"
 302535920001073, "Console"
