--- a/Mods ChoGGi/Disable Selection Panel Sizing/changes.txt
+++ b/Mods ChoGGi/Disable Selection Panel Sizing/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Updated code to match ECM.
+
 v0.5
 Added height limit for infopanel.
 Enabled scrollbar by default (flickering was fixed by devs sometime).
