Expanded Cheat Menu: ### Changed: - devs fixed inf loop in GenerateMarsScreenPoI, so Spawn Planetary Anomalies limit is removed.
Construction Show Drone Grid 2.0:
Added Drone Hub Extender and Elevator (thanks zinfinion)

Restore UI BBB 0.2:
Added other languages.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -452,7 +452,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920001119, "Show console log text in-game (probably an annoyance to non-modders)."
 302535920001133, "Show the console text in a window."
 302535920000407, "<left_click> Execute <right_click> Paste"
-302535920001138, "<left_click> Execute this command in the console, <right_click> to paste code in console."
+302535920001138, "<left_click> Execute this code in the console, <right_click> Paste code in console."
 302535920001159, "Any .lua files in <green>%s</green>."
 302535920000071, "Show Mods Log"
 302535920000692, "Log is blank (well not anymore)."
