Expanded Cheat Menu:
### Fixed:
- Depot Capacity not updating depots.
- Flatten Terrain/shift-f (thanks ElenaRoan).

Mods:

Fix Deposits Wrong Map 0.3:
Found where the bug happens, so no more need to apply mod option to move them.

Fix Rover In Dome 0.6:
Picard update.

Play All Mysteries 0.8:
Fixed crash from last update.
v0.7
Added some cleanup game should've been doing (or I thought it was, maybe changed).
Made St. Elmo's Fire start properly.

RC Bulldozer 1.0:
Made sure it flattens properly.

Show All Textures 0.3:
Made sure it works properly.

Spire Buildings Anywhere:
You can place them anywhere in a dome.

Triboelectric Sensor Tower 0.9:
Added scanning boost for sectors (whoops).
Lowered power cost.
Shows power consumption.

math. Functions 0.7:
Cleaning.

github@choggi.org

--- a/Mods ChoGGi/Play All Mysteries/changes.txt
+++ b/Mods ChoGGi/Play All Mysteries/changes.txt
@@ -1,3 +1,10 @@
+v0.8
+Fixed crash from last update.
+
+v0.7
+Added some cleanup game should've been doing (or I thought it was, maybe changed).
+Made St. Elmo's Fire start properly.
+
 v0.6
 Shows popup when mystery ends.
 
